# E-commerce4AI

./: .gitignore  pyproject.toml
cafe/: __init__.py  __main__.py
cafe/agents/: __init__.py  base_agent.py  evaluating.py  feature_engineering.py  judge.py  tool_calling_snowflake_agent.py  tools.py
cafe/core/: semantic_model.py  snowflake_client.py
cafe/models/: data_frame_builder.py  semantic_model_graph.py
cafe/prompts/: sql_judge_tool_calling_snowflake_agent.yaml  task_prompt_template.yaml  tool_calling_snowflake_agent.yaml
cafe/strategies/: evaluation.py  validation.py
cafe/utils/: config.py  jwt_token.py  logger.py
playground/: analyst_demo.py  llm_as_judge.py
